Edited build info in pom.xml

--- a/eatsmart/pom.xml
+++ b/eatsmart/pom.xml
@@ -7,10 +7,10 @@
     <artifactId>eatsmart</artifactId>
     <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
-    <name>eatsmart2</name>
+    <name>eatsmart</name>
 
     <build>
-        <finalName>eatsmart2</finalName>
+        <finalName>eatsmart</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -18,8 +18,8 @@
                 <version>2.5.1</version>
                 <inherited>true</inherited>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
