--- a/eatsmart/pom.xml
+++ b/eatsmart/pom.xml
@@ -57,7 +57,11 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.37</version>
-		</dependency>		
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.ext</groupId>
+			<artifactId>jersey-bean-validation</artifactId>
+		</dependency>
     </dependencies>
     <properties>
         <jersey.version>2.22.1</jersey.version>
