--- a/eatsmart/pom.xml
+++ b/eatsmart/pom.xml
@@ -62,6 +62,11 @@
 			<groupId>org.glassfish.jersey.ext</groupId>
 			<artifactId>jersey-bean-validation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
     </dependencies>
     <properties>
         <jersey.version>2.22.1</jersey.version>
